--- a/cics-genapp/Jenkinsfile
+++ b/cics-genapp/Jenkinsfile
@@ -1,43 +1,68 @@
+//Modifications of Priyanjana on 08/09/2022
+// GitLab mvpgenapp group MVP-genapp Ray 6/02/2021 10:46AM ADDED ZUNIT
+// Make sure to disable Gitlab CI Pipeline
+// https://developer.ibm.com/components/ibmz/tutorials/build-a-pipeline-with-jenkins-dependency-based-build-and-urbancode-deploy/
 // Agent labels
+echo 'cics-genapp Jenkinsfile pipeline started'
+//def zOsAgentLabel = env.ZOS_AGENT_LABEL ? env.ZOS_AGENT_LABEL : 'zosAgent'
 def zOsAgentLabel = env.ZOS_AGENT_LABEL ? env.ZOS_AGENT_LABEL : 'e2e-pipeline'
 def linuxAgent = 'master'
 
 // GIT repositories
-def srcGitRepo =  null
-def srcGitBranch = null
-def zAppBuildGitRepo = 'https://github.com/IBM/dbb-zappbuild.git'
-def zAppBuildGitBranch = 'main'
-def dbbGitRepo = 'https://github.com/IBM/dbb.git'
-def dbbGitBranch = 'main'
-
+//def srcGitRepo = 'http://MVPGitLabServer1.fyre.ibm.com/mvpgenapp/dbb-pipeline-1.git'
+//def srcGitBranch = 'master'
+//def zAppBuildGitRepo = 'http://MVPGitLabServer1.fyre.ibm.com/mvpgenapp/dbb-zappbuild-chg.git'
+//def zAppBuildGitBranch = 'develop' // Some important issues are not yet merged into master.
+//def dbbGitRepo = 'http://MVPGitLabServer1.fyre.ibm.com/mvpgenapp/dbb-chg.git'
+//def dbbGitBranch = 'main'
+def srcGitRepo = 'https://github.com/PriyanjanaGit/dbb-pipeline-1.git'
+def srcGitBranch = 'master'
+def zAppBuildGitRepo = 'https://github.com/PriyanjanaGit/dbb-zappbuild-chg.git'
+def zAppBuildGitBranch = 'master'
+def dbbGitRepo = 'https://github.com/PriyanjanaGit/dbb-chg.git'
+def dbbGitBranch = 'master'
+echo 'cics-genapp Jenkinsfile pipeline DBB'
 // DBB
-def dbbHome=null
-def dbbUrl=null
-def dbbHlq=null
-def dbbBuildType='-i'
-def dbbGroovyzOpts= ''
+def dbbHome='/var/dbb'
+//def dbbUrl='https://dbbsample-dbb-route-dbbserver.apps.mvpopenshift.cp.fyre.ibm.com/dbb'
+def dbbUrl='https://mvpserver1.fyre.ibm.com:9443/dbb'
+//def dbbHlq='RLAM'
+def dbbHlq='PROY'
+def dbbBuildType='-f'
+def dbbGroovyzOpts= '-Dlog4j.configurationFile=/var/dbb/conf/log4j2.properties'
+// def dbbGroovyzOpts= '-DBB_PERSONAL_DAEMON -Dlog4j.configurationFile=/var/dbb/conf/log4j2.properties'
+// def dbbGroovyzOpts= '-Dlog4j.configurationFile=/var/dbb/conf/log4j2.properties -Djavax.net.debug=ssl,handshake:verbose -Djdk.tls.client.protocols=TLSv1.2 -Dcom.ibm.jsse2.overrideDefaultTLS=true -Dcom.ibm.jsse2.overrideDefaultProtocol=TLSv1.2 '
+//def dbbBuildExtraOpts= '-zTest'
 def dbbBuildExtraOpts= ''
 def dbbCredentialOptions='-id ADMIN -pw ADMIN'
 
+echo 'cics-genapp Jenkinsfile pipeline Artifactory'
 // Artifactory
-def artiCredentialsId = 'artifactory_id'
+//def artiCredentialsId = 'ray_artifactory_id'
+def artiCredentialsId = 'Priya_artifactory_id'
+def ARTIFACTORY_URL='https://na.artifactory.swg-devops.com/artifactory/'
+//def ARTIFACTORY_REPO_PATH='hyc-mvp-team-maven-local/MVPGenapp'
+def ARTIFACTORY_REPO_PATH='hyc-mvp-team-maven-local/PriyaGenapp'
+
 
 
 // UCD
-def ucdApplication = 'GenApp-Deploy'
-def ucdProcess = 'Deploy'
-def ucdComponent = 'GenAppComponent'
-def ucdEnv = 'Development'
-def ucdSite = 'UrbanCodeE2EPipeline'
-
+def ucdApplication = 'RayDemo_App'
+def ucdProcess = 'Proy_Deploy_App_Bind_CICS_WEB_Proc'
+//def ucdProcess = 'Ray_Deploy_App_Bind_CICS_WEB_Proc'
+//def ucdProcess = 'Ray_Deploy_App_Bind_CICS_EXT_Proc'
+def ucdComponent = 'IBMDemo'
+def ucdEnv = 'Dev'
+def ucdSite = 'Jenkins2UCDServer'
+def ucdBuztool = '/var/ucd/v71/bin/buztool.sh'
 // Verbose
-def verbose = false
+def verbose = true
 
 // Private
 def hasBuildFiles = true
-def idzCodeReviewFlag = false
+def idzCodeReviewFlag = true
 def buildVerbose = ''
-
+/*
 @NonCPS
 String getArtifactoruUrl(String artiUrl) {
     // UCD always add /artifactory
@@ -48,16 +73,46 @@ String getArtifactoruUrl(String artiUrl) {
     }
     return artiUrl
 }
+*/
 
-
+echo 'cics-genapp Jenkinsfile pipeline Stage Git Clone/Refresh '
 pipeline {
 
-    agent { label linuxAgent }
+//    agent { label linuxAgent }
+    agent { label zOsAgentLabel }
 
     options { skipDefaultCheckout(true) }
 
+    // to set environment variables flag
+    environment {
+//        RUN_IDZ_CODE_REVIEW=false
+        RUN_IDZ_CODE_REVIEW=true
+        JAVA_HOME='/usr/lpp/java/J11.0_64'
+        IBM_JAVA_ENABLE_ASCII_FILETAG='ON'
+        DBB_HOME='/var/dbb'
+        DBB_CONF='/var/dbb/conf'
+    //  DBB_URL='https://dbbsample-dbb-route-dbbns.apps.mvpopenshift.cp.fyre.ibm.com/dbb/'
+        DBB_URL='https://mvpserver1.fyre.ibm.com:9443/dbb'
+//      DBB_HLQ='RLAM'
+        DBB_HLQ='PROY'
+        ARTIFACTORY_URL='https://na.artifactory.swg-devops.com/artifactory'
+//        ARTIFACTORY_REPO_PATH='hyc-mvp-team-maven-local/MVPGenapp'
+        ARTIFACTORY_REPO_PATH='hyc-mvp-team-maven-local/PriyaGenapp'
+        UCD_BUZTOOL_PATH='/var/ucd/v71/bin/buztool.sh'
+        UCD_HOME='/var/ucd/v73'
+        _BPX_JOBNAME = 'JENJOB'
+     //  GROOVYZ_BUILD_EXTRA_OPTS='-DBB_PERSONAL_DAEMON'
+     // GROOVYZ_BUILD_EXTRA_OPTS='-DBB_DAEMON_HOST 127.0.0.1 -DBB_DAEMON_PORT 8181'
+
+
+
+
+
+
+
+    }
     stages {
-        
+
         stage('Git Clone/Refresh') {
             agent { label zOsAgentLabel }
             steps {
@@ -68,7 +123,8 @@ pipeline {
                     if ( verbose ) {
                         echo sh(script: 'env|sort', returnStdout: true)
                     }
-                    
+
+echo 'cics-genapp Jenkinsfile pipeline Check Env '
                     if ( env.DBB_HOME == null )
                         error("DBB_HOME is not defined !!!")
                     if ( env.DBB_URL == null )
@@ -81,7 +137,8 @@ pipeline {
                         error("ARTIFACTORY_REPO_PATH is not defined !!!")
                     if ( env.UCD_BUZTOOL_PATH == null )
                         error("UCD_BUZTOOL_PATH is not defined !!!")
-                    
+
+echo 'cics-genapp Jenkinsfile pipeline dir -> cics-genapp '
                     dir('cics-genapp') {
                         sh(script: 'rm -f .git/info/sparse-checkout', returnStdout: true)
                         srcGitRepo = scm.getUserRemoteConfigs()[0].getUrl()
@@ -91,7 +148,7 @@ pipeline {
                                                 doGenerateSubmoduleConfigurations: false,
                                                 extensions: [
                                                 [$class: 'SparseCheckoutPaths',
-                                                   sparseCheckoutPaths:[[$class:'SparseCheckoutPath', 
+                                                   sparseCheckoutPaths:[[$class:'SparseCheckoutPath',
                                                    path:'cics-genapp/']]]
                                                 ],
                                                 submoduleCfg: [],
@@ -99,8 +156,8 @@ pipeline {
                                                                      url: srcGitRepo,
                                                                      ]]])
                     }
-                    
-                    dir("dbb-zappbuild") {
+
+                    dir("dbb-zappbuild-chg") {
                         sh(script: 'rm -f .git/info/sparse-checkout', returnStdout: true)
                         def scmVars =
                             checkout([$class: 'GitSCM', branches: [[name: zAppBuildGitBranch]],
@@ -110,8 +167,8 @@ pipeline {
                                 url: zAppBuildGitRepo,
                             ]]])
                     }
-                    
-                    dir("dbb") {
+
+                    dir("dbb-chg") {
                         sh(script: 'rm -f .git/info/sparse-checkout', returnStdout: true)
                         def scmVars =
                             checkout([$class: 'GitSCM', branches: [[name: dbbGitBranch]],
@@ -136,6 +193,7 @@ pipeline {
                 script{
                     def zUnitContents = []
                     def cccFolder = null
+ echo 'zunit echo 1 '
                     node( zOsAgentLabel ) {
                         if ( env.DBB_BUILD_EXTRA_OPTS != null ) {
                            dbbBuildExtraOpts = env.DBB_BUILD_EXTRA_OPTS
@@ -158,11 +216,11 @@ pipeline {
                         dbbHome = env.DBB_HOME
                         dbbUrl = env.DBB_URL
                         dbbHlq = env.DBB_HLQ
-                        sh "$dbbHome/bin/groovyz $dbbGroovyzOpts ${WORKSPACE}/dbb-zappbuild/build.groovy --logEncoding UTF-8 -w ${WORKSPACE} --application cics-genapp --sourceDir ${WORKSPACE}/cics-genapp  --workDir ${WORKSPACE}/BUILD-${BUILD_NUMBER} --hlq ${dbbHlq}.GENAPP --url $dbbUrl $dbbCredentialOptions -d $dbbBuildType $buildVerbose $dbbZunitCccOpts $dbbBuildExtraOpts"
+                        sh "$dbbHome/bin/groovyz $dbbGroovyzOpts ${WORKSPACE}/dbb-zappbuild-chg/build.groovy --logEncoding UTF-8 -w ${WORKSPACE} --application cics-genapp --sourceDir ${WORKSPACE}/cics-genapp  --workDir ${WORKSPACE}/BUILD-${BUILD_NUMBER} --hlq ${dbbHlq}.GENAPP --url $dbbUrl $dbbCredentialOptions -d $dbbBuildType $buildVerbose $dbbZunitCccOpts $dbbBuildExtraOpts -zTest"
                         def files = findFiles(glob: "**BUILD-${BUILD_NUMBER}/**/buildList.txt")
                         // Do not enter into some steps if nothing in the build list
                         hasBuildFiles = files.length > 0 && files[0].length > 0
-                        
+
                         def zUnitFiles = findFiles(glob: "**BUILD-${BUILD_NUMBER}/**/*.zunit.report.log")
                         zUnitFiles.each { zUnit ->
                             println "Process zUnit: $zUnit.path"
@@ -170,10 +228,11 @@ pipeline {
                             zUnitContents << zUnitContent
                         }
                     }
+ echo 'zunit echo 2 '
                     zUnitContents.each { zUnitContent ->
                         writeFile file: '/tmp/zUnit.zunit', text:zUnitContent
                         sh (returnStatus: true, script: '''#!/bin/sh
-                            curl --silent https://raw.githubusercontent.com/ibm/dbb-pipeline/master/cics-genapp/zUnit/xsl/AZUZ2J30.xsl -o /tmp/AZUZ2J30.xsl
+                            curl --silent https://raw.githubusercontent.com/ibm/dbb-pipeline-1/master/cics-genapp/zUnit/xsl/AZUZ2J30.xsl -o /tmp/AZUZ2J30.xsl
                             xsltproc /tmp/AZUZ2J30.xsl /tmp/zUnit.zunit > ${WORKSPACE}/zUnit.xml
                         ''')
                         junit "zUnit.xml"
@@ -208,10 +267,10 @@ pipeline {
                     script{
                          error ("zUnit tests failed!!!")
                     }
-                } 
+                }
             }
         }
-        
+
         stage("IDz Code Review") {
             when  { expression { return  idzCodeReviewFlag == true  } }
             steps {
@@ -220,7 +279,7 @@ pipeline {
                         def crContent = null
                         node( zOsAgentLabel ) {
                             BUILD_OUTPUT_FOLDER = sh (script: "ls ${WORKSPACE}/BUILD-${BUILD_NUMBER}  | grep build | sort -u", returnStdout: true).trim()
-                            sh "$DBB_HOME/bin/groovyz $dbbGroovyzOpts ${WORKSPACE}/dbb/Pipeline/RunIDZCodeReview/RunCodeReview.groovy --workDir ${WORKSPACE}/BUILD-${BUILD_NUMBER}/${BUILD_OUTPUT_FOLDER} -cr  ${WORKSPACE}/cics-genapp/cics-genapp/cr-rules/CodeReviewRules.dat -ccr  ${WORKSPACE}/cics-genapp/cics-genapp/cr-rules/CodeReviewRules.ccr"
+                            sh "$DBB_HOME/bin/groovyz $dbbGroovyzOpts ${WORKSPACE}/dbb-chg/Pipeline/RunIDZCodeReview/RunCodeReview.groovy --workDir ${WORKSPACE}/BUILD-${BUILD_NUMBER}/${BUILD_OUTPUT_FOLDER} -cr  ${WORKSPACE}/cics-genapp/cics-genapp/cr-rules/CodeReviewRules.dat -ccr  ${WORKSPACE}/cics-genapp/cics-genapp/cr-rules/CodeReviewRules.ccr"
                             dir ("${WORKSPACE}/BUILD-${BUILD_NUMBER}/${BUILD_OUTPUT_FOLDER}") {
                                 def crJunitFile = fileExists "CodeReviewJUNIT.xml"
                                 if ( crJunitFile ) {
@@ -240,37 +299,42 @@ pipeline {
                 }
             }
         }
-        
+
         stage('UCD Package') {
             steps {
                 script {
-                    node( zOsAgentLabel ) { 
+                    node( zOsAgentLabel ) {
                         if ( hasBuildFiles ) {
-                            def artiUrl = getArtifactoruUrl(env.ARTIFACTORY_URL)
+                        //  def artiUrl = getArtifactoruUrl(env.ARTIFACTORY_URL)
+                            def artiUrl = env.ARTIFACTORY_URL
                             def repositoryPath = env.ARTIFACTORY_REPO_PATH
-                            def ucdBuztool = env.UCD_BUZTOOL_PATH
+                      echo "Using Taas IBM Artifactory APIKEY"
                             BUILD_OUTPUT_FOLDER = sh (script: "ls ${WORKSPACE}/BUILD-${BUILD_NUMBER}  | grep build | sort -u", returnStdout: true).trim()
                             dir("${WORKSPACE}/BUILD-${BUILD_NUMBER}/${BUILD_OUTPUT_FOLDER}") {
                                 withCredentials([usernamePassword(credentialsId: artiCredentialsId, usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
                                     writeFile file: "${WORKSPACE}/BUILD-${BUILD_NUMBER}/artifactoy.properties", encoding: "ibm-1047",
-                                       text:"""password=$PASSWORD
-username=$USERNAME
-Repository_type=artifactory
-repository=${repositoryPath}
-url=${artiUrl}
+                                       text:"""EXTREPO.PASSWORD=$PASSWORD
+EXTREPO.username=$USERNAME
+EXTREPO.Repository_type=artifactory
+EXTREPO.repository=${repositoryPath}
+EXTREPO.url=${artiUrl}
                                       """
                                 }
-                                sh "$dbbHome/bin/groovyz $dbbGroovyzOpts ${WORKSPACE}/dbb/Pipeline/CreateUCDComponentVersion/dbb-ucd-packaging.groovy --buztool ${ucdBuztool} --component ${ucdComponent} --workDir ${WORKSPACE}/BUILD-${BUILD_NUMBER}/${BUILD_OUTPUT_FOLDER} --artifactRepository ${WORKSPACE}/BUILD-${BUILD_NUMBER}/artifactoy.properties"
+                                echo " Start dbb-ucd-packaging.groovy "
+ // password not encrypted, use my own
+                         //       sh "cp $HOME/Jenkins-Cloud/workspace/artifactory.properties ${WORKSPACE}/BUILD-${BUILD_NUMBER}/artifactoy.properties"
+                                sh "$dbbHome/bin/groovyz $dbbGroovyzOpts ${WORKSPACE}/dbb-chg/Pipeline/CreateUCDComponentVersion/dbb-ucd-packaging.groovy --buztool ${ucdBuztool} --component ${ucdComponent} --workDir ${WORKSPACE}/BUILD-${BUILD_NUMBER}/${BUILD_OUTPUT_FOLDER} -prop ${WORKSPACE}/BUILD-${BUILD_NUMBER}/artifactoy.properties"
                             }
                         }
                     }
                 }
             }
         }
-        
+
         stage('UCD Deploy') {
             steps {
                 script{
+echo 'UCD Deploy Starts'
                     if ( hasBuildFiles ) {
                         script{
                             step(
@@ -288,5 +352,5 @@ url=${artiUrl}
                 }
             }
         }
-    }
-}
+     }
+  }
