properties files changed

--- a/cics-genapp/application-conf/file.properties
+++ b/cics-genapp/application-conf/file.properties
@@ -2,11 +2,25 @@
 
 #
 # Script mappings for all application programs
-dbb.scriptMapping = BMS.groovy   :: cics-genapp/base/src/BMS/*.bms
-dbb.scriptMapping = Cobol.groovy :: cics-genapp/base/src/COBOL/*.cbl,cics-genapp/zUnit/testcase/*.cbl
+dbb.scriptMapping = BMS.groovy   :: MVP-genapp/base/src/BMS/*.bms
+dbb.scriptMapping = Cobol.groovy :: MVP-genapp/base/src/COBOL/*.cbl,MVP-genapp/zUnit/testcase/*.cbl
+dbb.scriptMapping = LinkEdit.groovy :: **/*.lnk
 
 
 # zUNIT
-dbb.scriptMapping = ZunitConfig.groovy ::  cics-genapp/zUnit/testcfg/*.bzucfg
-dbb.scannerMapping = ZUnitConfigScanner :: cics-genapp/zUnit/testcfg/*.bzucfg
-cobol_testcase = true :: cics-genapp/zUnit/testcase/*.cbl
+dbb.scriptMapping = ZunitConfig.groovy ::  MVP-genapp/zUnit/testcfg/*.bzucfg
+dbb.scannerMapping = ZUnitConfigScanner :: MVP-genapp/zUnit/testcfg/*.bzucfg
+cobol_testcase = true :: MVP-genapp/zUnit/testcase/*.cbl
+
+cobol_linkEditParms=XREF,LIST,RENT,NCAL :: **/COBOL/LGAPBR01.cbl
+cobol_linkEditMaxRC=4 :: **/COBOL/LGAPBR01.cbl
+
+#if your application has stored procedures specify them here
+cobol_isDB2SP = true :: **/cobol/epsdb2sp.cbl
+#if you want a program to be handled by isrlmex then specify them here
+cobol_isISRLEMX = true :: **/cobol/epscmort.cbl
+#if your application has MQ programs specify them here
+cobol_isMQ = true :: **/cobol/epsbatmq.cbl, **/cobol/epdb2cmq.cbl, **/cobol/epcicsmq.cbl, **/cobol/epdbbtmq.cbl
+#if you want to set deploy types then this is one method; another method is shown in cobol.groovy
+linkedit_deployType=CICSLOAD :: **/link/epsmlist.lnk, **/cobol/epscsmrt.cbl, **/cobol/epscmort.cbl
+
