--- a/cics-genapp/application-conf/application.properties
+++ b/cics-genapp/application-conf/application.properties
@@ -8,11 +8,12 @@ applicationPropFiles=file.properties,datasets.properties,Cobol.properties,BMS.pr
 # Comma separated list all source directories included in application build. Supports both absolute
 # and relative paths.  Relative assumed to be relative to ${workspace}.
 # ex: applicationSrcDirs=${application},/u/build/common/copybooks
-applicationSrcDirs=cics-genapp/base/src/COBOL,cics-genapp/base/src/BMS,cics-genapp/zUnit/testcfg,cics-genapp/zUnit/testcase
-
+#applicationSrcDirs=cics-genapp/base/src/COBOL,cics-genapp/base/src/BMS,cics-genapp/zUnit/testcfg,cics-genapp/zUnit/testcase
+applicationSrcDirs=MVP-genapp/base/src/COBOL,MVP-genapp/base/src/BMS
 #
 # Comma separated list of the build script processing order
-buildOrder=BMS.groovy,Cobol.groovy
+#buildOrder=BMS.groovy,Cobol.groovy
+buildOrder=BMS.groovy,Cobol.groovy,LinkEdit.groovy
 
 #
 # The main build branch.  Used for cloning collections for topic branch builds instead
@@ -24,7 +25,7 @@ mainBuildBranch=master
 enableTopicBranchBuild=false
 
 # exclude list used when scanning or running full build
-excludeFileList=.*,**/*.properties,**/*.xml,**/*.groovy,**/*.json,**/*.md,**/application-conf/*.*,**/LGWEBST5.cbl,**/LGASTAT1.cbl,**/LGAPBR01.cbl
+excludeFileList=.*,**/*.properties,**/*.xml,**/*.groovy,**/*.json,**/*.md,**/application-conf/*.*,**/LGWEBST5.cbl,**/LGASTAT1.cbl
 
 #
 # Impact analysis resolution rules (JSON format).
@@ -45,7 +46,7 @@ callRule = {"category": "CALL", \
                   "searchPath": [ \
                     {"sourceDir": "${workspace}", "directory": "${application}/base/src/COBOL"} \
                  ] \
-               }   
+               }
 
 # Rule to locate CALL in source code. This rule defaults to the local cobol folder
 # in the main application folder.
@@ -53,8 +54,8 @@ cobRule = {"category": "COB", \
                   "searchPath": [ \
                     {"sourceDir": "${workspace}", "directory": "${application}/base/src/COBOL"} \
                  ] \
-               } 
-               
+               }
+
 # Rule to locate CALL in source code. This rule defaults to the local cobol folder
 # in the main application folder.
 linkRule = {"category": "LINK", \
@@ -62,11 +63,11 @@ linkRule = {"category": "LINK", \
                     {"sourceDir": "${workspace}", "directory": "${application}/base/src/COBOL"} \
                  ] \
                }
-               
-               
+
+
 # Run zUnit Tests
 # Defaults to false, to enable, set to true
-runzTests=false
+runzTests=true
 
 #
 # Comma seperated list of the test script processing order
