pointing to dbb-zapbuild develop branch

--- a/cics-genapp/Jenkinsfile
+++ b/cics-genapp/Jenkinsfile
@@ -11,14 +11,14 @@ def linuxAgent = 'master'
 // GIT repositories
 //def srcGitRepo = 'http://MVPGitLabServer1.fyre.ibm.com/mvpgenapp/dbb-pipeline-1.git'
 //def srcGitBranch = 'master'
-//def zAppBuildGitRepo = 'http://MVPGitLabServer1.fyre.ibm.com/mvpgenapp/dbb-zappbuild-chg.git'
+//def zAppBuildGitRepo = 'http://MVPGitLabServer1.fyre.ibm.com/mvpgenapp/dbb-zappbuild.git'
 //def zAppBuildGitBranch = 'develop' // Some important issues are not yet merged into master.
 //def dbbGitRepo = 'http://MVPGitLabServer1.fyre.ibm.com/mvpgenapp/dbb-chg.git'
 //def dbbGitBranch = 'main'
 def srcGitRepo = 'https://github.com/PriyanjanaGit/dbb-pipeline-1.git'
 def srcGitBranch = 'master'
-def zAppBuildGitRepo = 'https://github.com/PriyanjanaGit/dbb-zappbuild-chg.git'
-def zAppBuildGitBranch = 'master'
+def zAppBuildGitRepo = 'https://github.com/PriyanjanaGit/dbb-zappbuild.git'
+def zAppBuildGitBranch = 'develop'
 def dbbGitRepo = 'https://github.com/PriyanjanaGit/dbb-chg.git'
 def dbbGitBranch = 'master'
 echo 'cics-genapp Jenkinsfile pipeline DBB'
@@ -157,7 +157,7 @@ echo 'cics-genapp Jenkinsfile pipeline dir -> cics-genapp '
                                                                      ]]])
                     }
 
-                    dir("dbb-zappbuild-chg") {
+                    dir("dbb-zappbuild") {
                         sh(script: 'rm -f .git/info/sparse-checkout', returnStdout: true)
                         def scmVars =
                             checkout([$class: 'GitSCM', branches: [[name: zAppBuildGitBranch]],
@@ -216,7 +216,7 @@ echo 'cics-genapp Jenkinsfile pipeline dir -> cics-genapp '
                         dbbHome = env.DBB_HOME
                         dbbUrl = env.DBB_URL
                         dbbHlq = env.DBB_HLQ
-                        sh "$dbbHome/bin/groovyz $dbbGroovyzOpts ${WORKSPACE}/dbb-zappbuild-chg/build.groovy --logEncoding UTF-8 -w ${WORKSPACE} --application cics-genapp --sourceDir ${WORKSPACE}/cics-genapp  --workDir ${WORKSPACE}/BUILD-${BUILD_NUMBER} --hlq ${dbbHlq}.GENAPP --url $dbbUrl $dbbCredentialOptions -d $dbbBuildType $buildVerbose $dbbZunitCccOpts $dbbBuildExtraOpts -zTest"
+                        sh "$dbbHome/bin/groovyz $dbbGroovyzOpts ${WORKSPACE}/dbb-zappbuild/build.groovy --logEncoding UTF-8 -w ${WORKSPACE} --application cics-genapp --sourceDir ${WORKSPACE}/cics-genapp  --workDir ${WORKSPACE}/BUILD-${BUILD_NUMBER} --hlq ${dbbHlq}.GENAPP --url $dbbUrl $dbbCredentialOptions -d $dbbBuildType $buildVerbose $dbbZunitCccOpts $dbbBuildExtraOpts -zTest"
                         def files = findFiles(glob: "**BUILD-${BUILD_NUMBER}/**/buildList.txt")
                         // Do not enter into some steps if nothing in the build list
                         hasBuildFiles = files.length > 0 && files[0].length > 0
