switched to develop

--- a/cics-genapp/Jenkinsfile
+++ b/cics-genapp/Jenkinsfile
@@ -18,7 +18,7 @@ def linuxAgent = 'master'
 def srcGitRepo = 'https://github.com/PriyanjanaGit/dbb-pipeline-1.git'
 def srcGitBranch = 'master'
 def zAppBuildGitRepo = 'https://github.com/PriyanjanaGit/dbb-zappbuild.git'
-def zAppBuildGitBranch = 'main'
+def zAppBuildGitBranch = 'develop'
 def dbbGitRepo = 'https://github.com/PriyanjanaGit/dbb-chg.git'
 def dbbGitBranch = 'master'
 echo 'cics-genapp Jenkinsfile pipeline DBB'
