--- a/cics-genapp/Jenkinsfile
+++ b/cics-genapp/Jenkinsfile
@@ -28,7 +28,7 @@ def dbbHome='/var/dbb'
 def dbbUrl='https://mvpserver1.fyre.ibm.com:9443/dbb'
 //def dbbHlq='RLAM'
 def dbbHlq='PROY'
-def dbbBuildType='-fi'
+def dbbBuildType='-i'
 def dbbGroovyzOpts= '-Dorg.slf4j.simpleLogger -cp /u/user3/logging'
 //def dbbGroovyzOpts= '-Dlog4j.configurationFile=/var/dbb/conf/log4j2.properties'
 // def dbbGroovyzOpts= '-DBB_PERSONAL_DAEMON -Dlog4j.configurationFile=/var/dbb/conf/log4j2.properties'
